2010-04-03  Ulrich Drepper  <drepper@redhat.com>

	* malloc/malloc.c (_int_free): Add one more sanity check for fastbins.

	* malloc/malloc.c (set_max_fast): Fix computation of the value.

2010-03-30  David S. Miller  <davem@davemloft.net>

	* sysdeps/unix/sysv/linux/mmap64.c (__mmap64): Fix
	MMAP2_PAGE_SHIFT test.

2010-03-29  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/bits/socket.h: Define MSG_WAITFORONE.

2010-03-28  Thomas Schwinge  <thomas@schwinge.name>

	* sysdeps/mach/hurd/dl-sysdep.c (_dl_sysdep_start): Adapt to auxv
	changes in the generic code.
	* elf/rtld.c (dl_main): Conditionalize the code that dereferences auxv
	to [HAVE_AUX_VECTOR].

2010-03-27  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/getpagesize.c (__getpagesize): If
	__ASSUME_AT_PAGESIZE we can rely on the value being set.

	* include/wchar.h: Undefine __need_mbstate_t and __need_wint_t
	unconditionally in the end.

	* posix/glob.c (glob): Initialize oldcount early, too.

2010-03-26  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/i386/fcntl.c: Define miss_F_GETOWN_EX
	only if needed.
	Patch mostly by Paul Pluzhnikov <ppluzhnikov@google.com>.

2010-03-26  Richard Henderson  <rth@redhat.com>

	* sysdeps/generic/ldsodefs.h (_dl_random): Mark attribute_relro;

	* stdio-common/psiginfo.c (psiginfo): Fix printf format
	warning for si_band.

	* locale/setlocale.c (free_category): Finish renaming
	struct locale_data to __locale_data.

	* csu/gmon-start.c (ENTRY_POINT, etext): Declare as char[], not void.
	* elf/dl-sysdep.c (_end): Likewise.
	* sysdeps/unix/sysv/dl-sysdep.c (frob_brk): Likewise with locally
	declared _end, and associated variables.

2010-03-26  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/posix/getaddrinfo.c (gaih_inet): Don't assume success always
	means aborting the loop over the NSS methods.

2010-03-25  Andreas Schwab  <schwab@redhat.com>

	* sysdeps/posix/getaddrinfo.c (gaih_inet): Reset no_data before
	each action.
