@@ -1,5 +1,9 @@
 2010-04-03  Ulrich Drepper  <drepper@redhat.com>
 
+	[BZ #11449]
+	* crypt/crypt_util.c (__init_des_r): Add memory barrier before setting
+	small_tables_initialized.
+
 	* malloc/malloc.c (_int_free): Add one more sanity check for fastbins.
 
 	* malloc/malloc.c (set_max_fast): Fix computation of the value.
